# cmake-clone-target

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
cmake/: clone-target.cmake
include/: shared-lib.h  static-lib.h
scripts/: clone-target-tests.sh
src/: file.cpp  file.h  hello-world.c  main.c  object-world.cpp  shared-lib.cpp  shared-world.c  static-lib.c  static-world.c
